Fixed wrapping of the sim stats if the container width is to small

--- a/p5/AntSimCodingGame/sim/styles.css
+++ b/p5/AntSimCodingGame/sim/styles.css
@@ -9,7 +9,7 @@ body {
 
 #statsPanel {
     position: relative;
-    width: 100%;
+    width: 800px;
     height: 4rem;
     background-color: #333;
 }
